# fractal

./: CMakeLists.txt  README.md  main.cpp
example/: example.txt
